# moenet-dn42-agent

./: .gitignore  DOCKER.md  LICENSE  README.md  WHOIS_CHANGES.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  main.py
src/api/: __init__.py  server.py
src/client/: control_plane.py
src/community/: __init__.py  constants.py
src/core/: __init__.py  config.py
src/daemon/: __init__.py  ibgp_sync.py  mesh_sync.py  sync.py
src/executor/: __init__.py  bird.py  firewall.py  loopback.py  wireguard.py
src/integrations/: __init__.py  control_plane.py
src/renderer/: __init__.py  babel.py  bird.py  ibgp.py  ospf.py  wg_mesh.py  wireguard.py
src/services/: __init__.py  bird.py  community.py  community_constants.py  ibgp.py  mesh.py  network.py  wireguard.py
src/state/: __init__.py  manager.py
src/workers/: __init__.py  latency_probe.py  mtu_probe.py  sync_daemon.py
systemd/: moenet-agent.service
templates/: bird_peer.conf.j2  wireguard.conf.j2
tests/: conftest.py  test_server.py
