[project]
name = "moenet-dn42-agent"
version = "0.1.0"
description = "DN42 Network Agent - Node-side peer and routing management"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
